# sandtrace

./: .gitignore  CMakeLists.txt  README.md  helperfunctions.cpp  helperfunctions.h  helperfunctions.hpp  load_mesh.cpp  load_mesh.hpp  main.cpp  notes.md  test.cpp  vcpkg.json
classes/: CMakeLists.txt  Scene.h  camera.cpp  camera.h  camera.hpp  color_vertex.hpp  directional_light.cpp  directional_light.h  directional_light.hpp  image_data.cpp  image_data.h  image_data.hpp  image_texture.cpp  image_texture.hpp  material.cpp  material.h  material.hpp  mesh.cpp  mesh.hpp  monochrome_texture.hpp  plane.cpp  plane.h  plane.hpp  point_light.cpp  point_light.h  point_light.hpp  primitive.cpp  primitive.h  primitive.hpp  ray.cpp  ray.h  ray.hpp  scene.cpp  scene.h  scene.hpp  sphere.cpp  sphere.h  sphere.hpp  spot_light.cpp  spot_light.h  (+7 more)
scenes/: scene1.json  scene2.json
src/: image_data.cpp  main.cpp  renderer.cpp  renderer.hpp
src/geometry/: mesh.hpp  plane.cpp  plane.hpp  polygon_vertex.hpp  primitive.hpp  sphere.cpp  sphere.hpp  triangle.hpp
src/lighting/: colour.cpp  colour.hpp  directional_light.cpp  directional_light.hpp  material.cpp  material.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp
src/scene/: camera.cpp  scene.cpp  scene.hpp
src/serdes/: json.cpp  json.hpp
src/textures/: monochrome_texture.hpp  texture.hpp  texture_pool.cpp  texture_pool.hpp
